syntax = "proto3";

package myblog.proto.storage;

import "google/protobuf/timestamp.proto";
  
// Object that keeps in the storage server.
message File {
  // Identifier of the file
  string id = 1;
  // An uploaded file path
  string path = 2;
  // An original file name
  string file_name = 3;
  // Valid url string composes with file name and id
  string slug = 4;
  // Optional field 1 for using in some storage server
  string optional_field_1 = 5;
  // Optional field 2 for using in some storage server
  string optional_field_2 = 6;
  // Optional field 3 for using in some storage server
  string optional_field_3 = 7;
  // Date-time that the file was uploaded
  google.protobuf.Timestamp uploaded_at = 8;
  // Date-time that the file was modified
  google.protobuf.Timestamp modified_at = 9;
}